Fix jumpy controls

--- a/src/blocks/icon/styles/editor.scss
+++ b/src/blocks/icon/styles/editor.scss
@@ -1,4 +1,5 @@
 .components-coblocks-icon-block--advanced-size {
+	margin-bottom: 1.5em;
 	position: relative;
 
 	.components-color-palette__clear {
